--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE HTML>
-<html>
-<head>
-	<title>Secrets</title>
-</head>
+
+
+{% extends "bootstrap/base.html" %}
+{% block title %}Secrets{% endblock %}
+
+
+
+{% block content %}
 <div class="jumbotron">
 	<div class="container">
 		<h1>Welcome</h1>
@@ -10,4 +14,5 @@
 		<a class="btn btn-primary btn-lg" href=" {{ url_for('login') }} ">Login</a>
 	</div>
 </div>
-</html>
+
+{% endblock %}
