--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,15 @@
 <!DOCTYPE HTML>
 
-<html>
-	<head>
-		<title>Login</title>
-	</head>
-	<body>
+{% extends "bootstrap/base.html" %}
+{% extends "bootstrap/wtf.html" as wtf %}
+{% block title %}Login{% endblock %}
+
+        {% block content %}
         <div class="container">
 		<h1>Login</h1>
         <!-- This is where our form will go. -->
-        <form action="#" method="post">
-        {{ form.csrf_token }}
-        {{ form.email.label }} {{ form.email(size=20) }}
-        {{ form.password.label }} {{ form.password(size=20) }}
-        <input type='submit' value='Log In'>
-        </form>
+        {{ wtf.quick_form(form) }}
 
         </div>
 	</body>
-</html>
+    {% endblock %}
